--- a/catalogs.html
+++ b/catalogs.html
@@ -28,7 +28,7 @@
 
 			<!-- Сервіс 1 -->
 			<div class="service">
-				<img src="#" alt="Діагностика двигуна">
+				<img src="img/diagnost-dviglo.jpg" alt="Діагностика двигуна">
 				<div class="service-details">
 					<h2>Діагностика двигуна</h2>
 					<ul>
@@ -43,7 +43,7 @@
 
 			<!-- Сервіс 2 -->
 			<div class="service">
-				<img src="#" alt="Заміна моторної оливи">
+				<img src="img/Заміна-моторної-оливи-768x426.jpg" alt="Заміна моторної оливи">
 				<div class="service-details">
 					<h2>Заміна моторної оливи</h2>
 					<ul>
@@ -58,7 +58,7 @@
 
 			<!-- Сервіс 3 -->
 			<div class="service">
-				<img src="#" alt="Ремонт гальмівної системи">
+				<img src="img/galmivna-systema.webp" alt="Ремонт гальмівної системи">
 				<div class="service-details">
 					<h2>Ремонт гальмівної системи</h2>
 					<ul>
@@ -73,7 +73,7 @@
 
 			<!-- Сервіс 4 -->
 			<div class="service">
-				<img src="#" alt="Заміна акумулятора">
+				<img src="img/1538072181_1537658954.jpg" alt="Заміна акумулятора">
 				<div class="service-details">
 					<h2>Заміна акумулятора</h2>
 					<ul>
@@ -88,7 +88,7 @@
 
 			<!-- Сервіс 5 -->
 			<div class="service">
-				<img src="#" alt="Ремонт підвіски">
+				<img src="img/vach.jpg" alt="Ремонт підвіски">
 				<div class="service-details">
 					<h2>Ремонт підвіски</h2>
 					<ul>
@@ -103,7 +103,7 @@
 
 			<!-- Сервіс 6 -->
 			<div class="service">
-				<img src="#" alt="Шиномонтаж та балансування">
+				<img src="img/shinomontazh-i-balansirovka__faq.webp" alt="Шиномонтаж та балансування">
 				<div class="service-details">
 					<h2>Шиномонтаж та балансування</h2>
 					<ul>
@@ -118,7 +118,7 @@
 
 			<!-- Сервіс 7 -->
 			<div class="service">
-				<img src="#" alt="Заміна гальмівної рідини">
+				<img src="img/zamena-tormoznoy-zhidkosti-foto-1.jpg" alt="Заміна гальмівної рідини">
 				<div class="service-details">
 					<h2>Заміна гальмівної рідини</h2>
 					<ul>
@@ -133,7 +133,7 @@
 
 			<!-- Сервіс 8 -->
 			<div class="service">
-				<img src="#" alt="Чистка кондиціонера">
+				<img src="img/aetozolnye-ochistitel-avto-konditsionerov_opt.jpg" alt="Чистка кондиціонера">
 				<div class="service-details">
 					<h2>Чистка кондиціонера</h2>
 					<ul>
@@ -148,7 +148,7 @@
 
 			<!-- Сервіс 9 -->
 			<div class="service">
-				<img src="#" alt="Полірування кузова">
+				<img src="img/inx960x640.jpg" alt="Полірування кузова">
 				<div class="service-details">
 					<h2>Полірування кузова</h2>
 					<ul>
@@ -163,7 +163,7 @@
 
 			<!-- Сервіс 10 -->
 			<div class="service">
-				<img src="#" alt="Заміна склопакетів і фар">
+				<img src="img/steklo-far-1.jpg" alt="Заміна склопакетів і фар">
 				<div class="service-details">
 					<h2>Заміна склопакетів і фар</h2>
 					<ul>
