--- a/catalogs.html
+++ b/catalogs.html
@@ -38,9 +38,22 @@
 
 			<ul class="services-list">
 				<li class="service-item">
-					<img src="img/diagnost-dviglo.jpg" alt="Діагностика двигуна">
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/diagnost-dviglo.jpg" alt="Діагностика двигуна">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Діагностика двигуна</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: повна комп’ютерна діагностика</li>
 						<li>Час виконання: 1–2 години</li>
 						<li>Ціна: 800 грн</li>
@@ -50,9 +63,22 @@
 				</li>
 
 				<li class="service-item">
-					<img src="img/Заміна-моторної-оливи-768x426.jpg" alt="Заміна моторної оливи">
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/Заміна-моторної-оливи-768x426.jpg" alt="Заміна моторної оливи">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Заміна моторної оливи</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: заміна моторної оливи та фільтра</li>
 						<li>Час виконання: 30–45 хв</li>
 						<li>Ціна: від 400 грн</li>
@@ -62,9 +88,23 @@
 				</li>
 
 				<li class="service-item">
-					<img src="img/galmivna-systema.webp" alt="Ремонт гальмівної системи">
+
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/galmivna-systema.webp" alt="Ремонт гальмівної системи">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Ремонт гальмівної системи</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: заміна колодок та дисків</li>
 						<li>Час виконання: 1–2 години</li>
 						<li>Ціна: від 600 грн</li>
@@ -74,9 +114,23 @@
 				</li>
 
 				<li class="service-item">
-					<img src="img/1538072181_1537658954.jpg" alt="Заміна акумулятора">
+
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/1538072181_1537658954.jpg" alt="Заміна акумулятора">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Заміна акумулятора</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: підбір та установка нового акумулятора</li>
 						<li>Час виконання: 15–30 хв</li>
 						<li>Ціна: від 1200 грн</li>
@@ -86,9 +140,23 @@
 				</li>
 
 				<li class="service-item">
-					<img src="img/vach.jpg" alt="Ремонт підвіски">
+
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/vach.jpg" alt="Ремонт підвіски">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Ремонт підвіски</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: заміна амортизаторів, стійок та пружин</li>
 						<li>Час виконання: 2–3 години</li>
 						<li>Ціна: від 1500 грн</li>
@@ -98,9 +166,23 @@
 				</li>
 
 				<li class="service-item">
-					<img src="img/shinomontazh-i-balansirovka__faq.webp" alt="Шиномонтаж та балансування">
+
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/shinomontazh-i-balansirovka__faq.webp" alt="Шиномонтаж та балансування">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Шиномонтаж та балансування</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: монтаж/демонтаж коліс та балансування</li>
 						<li>Час виконання: 30–60 хв</li>
 						<li>Ціна: від 300 грн</li>
@@ -109,9 +191,23 @@
 					</ul>
 				</li>
 				<li class="service-item">
-					<img src="img/zamena-tormoznoy-zhidkosti-foto-1.jpg" alt="Заміна гальмівної рідини">
+
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/zamena-tormoznoy-zhidkosti-foto-1.jpg" alt="Заміна гальмівної рідини">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Заміна гальмівної рідини</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: повна заміна рідини у гальмівній системі</li>
 						<li>Час виконання: 45 хв – 1 год</li>
 						<li>Ціна: від 350 грн</li>
@@ -121,9 +217,24 @@
 				</li>
 
 				<li class="service-item">
-					<img src="img/aetozolnye-ochistitel-avto-konditsionerov_opt.jpg" alt="Чистка кондиціонера">
+
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/aetozolnye-ochistitel-avto-konditsionerov_opt.jpg"
+									alt="Чистка кондиціонера">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Чистка кондиціонера</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: професійна дезінфекція та заправка кондиціонера</li>
 						<li>Час виконання: 1–1.5 години</li>
 						<li>Ціна: від 500 грн</li>
@@ -133,9 +244,23 @@
 				</li>
 
 				<li class="service-item">
-					<img src="img/inx960x640.jpg" alt="Полірування кузова">
+
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/inx960x640.jpg" alt="Полірування кузова">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Полірування кузова</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: комплексне полірування та захисне покриття</li>
 						<li>Час виконання: 2–4 години</li>
 						<li>Ціна: від 1000 грн</li>
@@ -146,9 +271,22 @@
 
 
 				<li class="service-item">
-					<img src="img/steklo-far-1.jpg" alt="Заміна склопакетів і фар">
+					<div class="flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="img/steklo-far-1.jpg" alt="Заміна склопакетів і фар">
+							</div>
+							<div class="flip-card-back">
+								<h4>Типу якийсь заголовок:</h4>
+								<p>
+									Якийсь текст
+								</p>
+							</div>
+						</div>
+					</div>
 					<h2>Заміна склопакетів і фар</h2>
-					<ul>
+					<button type="button" class="details-trigger">Детальніше</button>
+					<ul class="service-details">
 						<li>Тип послуги: заміна фар, ліхтарів, склопакетів</li>
 						<li>Час виконання: 1–2 години</li>
 						<li>Ціна: від 800 грн</li>
@@ -183,14 +321,7 @@
 			</div>
 		</footer>
 	</div>
-	<script>
-		const burger = document.getElementById('burger');
-		const navLinks = document.querySelector('.main-menu');
-
-		burger.addEventListener('click', () => {
-			navLinks.classList.toggle('active');
-		});
-	</script>
+	<script src="./script.js">	</script>
 </body>
 
 </html>
