--- a/index.html
+++ b/index.html
@@ -106,14 +106,7 @@
 		</footer>
 
 	</div>
-	<script>
-		const burger = document.getElementById('burger');
-		const navLinks = document.querySelector('.main-menu');
-
-		burger.addEventListener('click', () => {
-			navLinks.classList.toggle('active');
-		});
-	</script>
+	<script src="./script.js">	</script>
 </body>
 
 </html>
